# pw-redact

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  fly.toml.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: allow-list-guide.md  architecture.md  deployment.md
src/pw_redact/: __init__.py  auth.py  config.py  main.py
src/pw_redact/models/: __init__.py  requests.py  responses.py
src/pw_redact/redactor/: allow_list.py  engine.py  financial_recognizers.py  manifest.py  presidio_config.py  regex_patterns.py
src/pw_redact/rehydrator/: engine.py
src/pw_redact/security/: input_validator.py  output_validator.py  prompt_injection_detector.py  rate_limiter.py
src/pw_redact/utils/: __init__.py  logging.py
tests/: conftest.py  test_allow_list.py  test_api.py  test_e2e_smoke.py  test_financial_recognizers.py  test_redactor.py  test_regex_patterns.py  test_regression.py  test_rehydrator.py  test_security.py
tests/fixtures/: sample_meeting_notes.txt  sample_mortgage_notes.txt  sample_tax_notes.txt  sample_transcript.txt
