[project]
name = "pw-redact"
version = "0.1.0"
description = "Open-source PII redaction engine for financial services AI pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["pii", "redaction", "privacy", "financial", "compliance", "presidio", "ria", "fintech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/Protocol-Wealth/pw-redact"
Repository = "https://github.com/Protocol-Wealth/pw-redact"
Issues = "https://github.com/Protocol-Wealth/pw-redact/issues"
Documentation = "https://github.com/Protocol-Wealth/pw-redact/tree/main/docs"
Changelog = "https://github.com/Protocol-Wealth/pw-redact/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
